Реализованы пользователи (admin) и исправлены дефолты DTO для подборок